# Ejercicio-RegresionLineal

./: CMakeLists.txt  README.md  backupwineDataHC.ods  extoeigen.cpp  extoeigen.h  main.cpp  modellinealregression.cpp  modellinealregression.h  winedata.csv
Debug/: CMakeCache.txt  Makefile  RegresionLineal.cbp  cmake_install.cmake  winedata.ods  y_Train_hat.txt
